Add file uploading

--- a/client/head.html
+++ b/client/head.html
@@ -7,11 +7,11 @@
 	<meta name="copyright" content="Partyline" />
 	<meta name="description" content="Partyline!" />
 	<meta name="keywords" content="" />
-	<meta name="msapplication-TileImage" content="/images/favicon.png" />
+	<meta name="msapplication-TileImage" content="/image/favicon.png" />
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
 	<meta name="referrer" content="no-referrer" />
 	<meta name="robots" content="follow, index, noarchive" />
-	<meta name="viewport" content="initial-scale=1.0, height=device-height, width=device-width" />
+	<meta name="viewport" content="initial-scale=1.0, height=device-height, width=device-width, minimal-ui" />
 	<base href="localhost" />
 	<title>Partyline</title>
 	
@@ -24,8 +24,8 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
-	<link href="/images/favicon.png" rel="icon" sizes="16x16 24x24 32x32 48x48 64x64 128x128 192x192" />
-	<link href="/images/favicon.png" rel="apple-touch-icon" />
+	<link href="/image/favicon.png" rel="icon" sizes="16x16 24x24 32x32 48x48 64x64 128x128 192x192" />
+	<link href="/image/favicon.png" rel="apple-touch-icon" />
 	<link href="/misc/manifest.json" rel="manifest" />
 	
 	<!-- Remotely hosted libraries. -->
