--- a/client/head.html
+++ b/client/head.html
@@ -11,7 +11,7 @@
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
 	<meta name="referrer" content="no-referrer" />
 	<meta name="robots" content="follow, index, noarchive" />
-	<meta name="viewport" content="initial-scale=1.0, height=device-height, width=device-width, minimal-ui" />
+	<meta name="viewport" content="initial-scale=1.0, height=device-height, width=device-width" />
 	<base href="localhost" />
 	<title>Partyline</title>
 	
